# aprs

./: Dockerfile  README.md
.devcontainer/: Dockerfile  (+1 more)
aprs_ws/install/ur/share/ur/: local_setup.sh  package.sh  package.xml
aprs_ws/install/ur/share/ur/environment/: ur.dsv
aprs_ws/install/ur/share/ur/launch/: view_ur.launch.py
aprs_ws/install/ur/share/ur/urdf/: common_gazebo.xacro  ur.urdf.xacro  ur5e_robot.urdf.xacro  ur_macro.xacro
aprs_ws/install/ur_setup/share/ur_setup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
aprs_ws/install/ur_setup/share/ur_setup/cmake/: ur_setupConfig.cmake
aprs_ws/install/ur_setup/share/ur_setup/launch/: ur_setup.launch.py
aprs_ws/install/worlds/share/worlds/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
aprs_ws/install/worlds/share/worlds/models/conveyor/: model.sdf
aprs_ws/install/worlds/share/worlds/models/fanuc_lrmate200id/: fanuc_gripper_peter.sdf
aprs_ws/install/worlds/share/worlds/models/gripper/: Finger_Sides_Closer.STL  gripper_robot (copy).sdf  gripper_robot.sdf  model.config
aprs_ws/install/worlds/share/worlds/models/meshes/: large_gear_holder.dae
aprs_ws/install/worlds/share/worlds/models/motoman_sia20d/: sia20d (another copy).sdf  sia20d.urdf
aprs_ws/install/worlds/share/worlds/models/my_gripper/: model.config  simple_gripper.sdf
aprs_ws/install/worlds/share/worlds/models/my_robot/: model.config
aprs_ws/install/worlds/share/worlds/models/robotiq_support/: model.config
aprs_ws/install/worlds/share/worlds/models/sia_motoman/: model.config  sia5_test.sdf
aprs_ws/install/worlds/share/worlds/models/simple_mobile_manipulator/: model.config
aprs_ws/install/worlds/share/worlds/models/sku_large_gear_vessel/: sku_large_gear_vessel.sdf
aprs_ws/install/worlds/share/worlds/models/sku_medium_gear_vessel/: sku_medium_gear_vessel.sdf
aprs_ws/install/worlds/share/worlds/models/sku_part_large_gear/: sku_part_large_gear.sdf
aprs_ws/install/worlds/share/worlds/models/sku_part_medium_gear/: sku_part_medium_gear.sdf
aprs_ws/install/worlds/share/worlds/models/sku_part_small_gear/: sku_part_small_gear.sdf
aprs_ws/install/worlds/share/worlds/models/table/: table.sdf
aprs_ws/src/aprs_control/: CMakeLists.txt  package.xml
aprs_ws/src/aprs_control/include/aprs_control/: aprs_node.hpp
aprs_ws/src/aprs_control/launch/: aprs_ur_control.launch.py  moveit_test.launch.py
aprs_ws/src/aprs_control/src/: aprs_node.cpp  aprs_ur_node.cpp  moveit_test.cpp
aprs_ws/src/assets/robots/fanuc_lrmate200id/fanuc_description/: CMakeLists.txt
aprs_ws/src/assets/robots/fanuc_lrmate200id/fanuc_description/config/: initial_positions.yaml
aprs_ws/src/assets/robots/fanuc_lrmate200id/fanuc_description/urdf/: fanuc.urdf.xacro  jointlimits.xacro
aprs_ws/src/assets/robots/motoman_sia20/motoman_description/: CMakeLists.txt
aprs_ws/src/assets/robots/motoman_sia20/motoman_description/urdf/: motoman.urdf.xacro
aprs_ws/src/assets/robots/ur5e/ur_description_gz/: CMakeLists.txt  package.xml
aprs_ws/src/assets/robots/ur5e/ur_description_gz/urdf/: ur.ros2_control.xacro  ur.urdf  ur.urdf.xacro
aprs_ws/src/assets/sensors/camera_mount/: CMakeLists.txt
aprs_ws/src/assets/sensors/camera_mount/meshes/: camera_mount.STL
aprs_ws/src/assets/sensors/camera_mount/urdf/: camera_mount.urdf.xacro
aprs_ws/src/assets/worlds/: CMakeLists.txt  aprs.sdf  demo_world.sdf  world.sdf
aprs_ws/src/assets/worlds/models/Lab_Wall/meshes/: New_Model.dae  TESTDOOR.dae  Untitled5.dae  another.dae  twodo.dae
aprs_ws/src/assets/worlds/models/fanuc_lrmate200id/: final_fanuc_gripper.urdf
aprs_ws/src/assets/worlds/models/gear_support/meshes/: newKitTray_2Large_2Small.stl
aprs_ws/src/assets/worlds/models/gripper/: gripper_robot.urdf
aprs_ws/src/assets/worlds/models/my_robot/: model.sdf
aprs_ws/src/assets/worlds/models/robotiq_c2_model_visualization/: model.config
aprs_ws/src/assets/worlds/models/sku_kit_m2l1_vessel/: sku_kit_m2l1_vessel.sdf
aprs_ws/src/assets/worlds/models/sku_large_gear_vessel/: sku_large_gear_vessel.sdf
aprs_ws/src/assets/worlds/models/sku_medium_gear_vessel/: model.config  sku_medium_gear_vessel.sdf
aprs_ws/src/assets/worlds/models/sku_part_large_gear/: sku_part_large_gear.sdf
aprs_ws/src/assets/worlds/models/sku_part_medium_gear/: model.config
aprs_ws/src/assets/worlds/models/table/table_leg/: model.config
aprs_ws/src/gear_place/: CMakeLists.txt
aprs_ws/src/gear_place/gear_place/: find_object_color.py  object_depth.py
aprs_ws/src/gear_place/launch/: gear.launch.py
aprs_ws/src/gear_ur/: CMakeLists.txt  package.xml
aprs_ws/src/gear_ur/launch/: moveit_test.launch.py
aprs_ws/src/gear_ur/src/: gear_pick.cpp  main.cpp
aprs_ws/src/point_cloud/: CMakeLists.txt
aprs_ws/src/point_cloud/scripts/: point_cloud.py
aprs_ws/src/ur/: CMakeLists.txt
aprs_ws/src/ur/urdf/: camera.urdf.xacro  ur.urdf.xacro  vaccum.urdf.xacro
ariac_ws/src/ariac_gz/: CMakeLists.txt  package.xml
ariac_ws/src/ariac_gz/ariac_gz/: environment_startup.py  spawn_params.py
ariac_ws/src/ariac_gz/config/trials/: rwa3.yaml  rwa32.yaml  rwa4.yaml
ariac_ws/src/ariac_gz/hooks/: ariac_gz.dsv.in  ariac_gz.sh.in
ariac_ws/src/ariac_gz/launch/: ariac.launch.py
ariac_ws/src/ariac_gz/models/assembly_insert/: model.sdf
ariac_ws/src/ariac_gz/models/conveyor_belt/: model.sdf
ariac_ws/src/ariac_gz/models/disposal_bin/: model.sdf
ariac_ws/src/ariac_gz/models/floor/: model.sdf
ariac_ws/src/ariac_gz/models/human/: model.sdf
ariac_ws/src/ariac_gz/models/open_box_ariac/: model.sdf
ariac_ws/src/ariac_gz/nodes/: environment_startup_node.py
ariac_ws/src/ariac_gz/worlds/: diff.sdf
plansys_ws/src/cpp_srvcli/: CMakeLists.txt
plansys_ws/src/cpp_srvcli/include/cpp_srvcli/: header_file.cpp
plansys_ws/src/cpp_srvcli/src/: add_two_ints_server.cpp  move_server.cpp  move_to_pose_server.cpp
robotiq/robotiq_ethercat/: CMakeLists.txt
robotiq/robotiq_ethercat/include/robotiq_ethercat/: ethercat_manager.h
robotiq/robotiq_ethercat/src/: ethercat_manager.cpp
(+1498 files in other folders)
