<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>worlds</name>
  <version>0.0.0</version>
  <description>Gazebo-specific implementations for the ros_gz_example project</description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>Apache 2.0</license>
  <author>Michael Carroll</author>
  <author>Dharini Dutia</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Garden -->
  <depend condition="$GZ_VERSION == '' or $GZ_VERSION == garden">gz-sim7</depend>

  <build_depend>rclcpp</build_depend>

  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <exec_depend>gazebo_ros2_control</exec_depend> -->
  <!-- <exec_depend>gazebo_ros</exec_depend> -->
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>sdformat_urdf</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>rqt_topic</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>ros_gz</exec_depend>

  <exec_depend>gz_ros2_control</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <ros_gz-sim GZ_SIM_RESOURCE_PATH="${prefix}/models"/>
  </export>
</package>

